--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ pyarrow==21.0.0
 pydantic==2.12.4
 pydantic_core==2.41.5
 pydeck==0.9.1
+PyMySQL==1.1.2
 python-dateutil==2.9.0.post0
 pytz==2025.2
 referencing==0.37.0
